tests/compile_failures/events/invalid_events.rs
use dioxus_sugar::events;

#[events(onclik)]
struct Props {}

#[events(keyboard, exclude(onkyprss))]
struct Props2 {}

fn main() {}